<?xml version="1.0" encoding="utf-8"?>
<org.jxxy.debug.corekit.widget.RoundConstraintLayout
    android:background="@color/white"
    android:paddingTop="12dp"
    android:paddingBottom="6dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:round_corner_top="9dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="36dp"-->
<!--        android:id="@+id/grey_view"-->
<!--        android:background="@drawable/round_grey"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent">-->
<!--    </View>-->
    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="@dimen/normal_text_size"
        android:background="@color/transparent"
        android:hint="记录灵光瞬间"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:maxLines="2"
        android:gravity="top|left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fullScreenIcon"
       />
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fullScreenIcon"
        android:textSize="@dimen/small_icon_size"
        android:text="@string/note_full_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enjoyIcon"
        android:textSize="22dp"
        android:textColor="@color/grey_dark"
        android:text="@string/note_enjoy"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/pictureRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </org.jxxy.debug.corekit.widget.IconFont>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aiteIcon"
        android:textSize="@dimen/mid_icon_size"
        android:textColor="@color/grey_dark"
        android:text="@string/note_aite"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/enjoyIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        >
    </org.jxxy.debug.corekit.widget.IconFont>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/photoIcon"
        android:textSize="@dimen/mid_icon_size"
        android:textColor="@color/dark_grey"
        android:text="@string/note_photo"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/aiteIcon"
        app:layout_constraintBottom_toBottomOf="parent">
    </org.jxxy.debug.corekit.widget.IconFont>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moreIcon"
        android:textSize="@dimen/mid_icon_size"
        android:textColor="@color/dark_grey"
        android:text="@string/note_more"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/photoIcon"
        app:layout_constraintBottom_toBottomOf="parent">
    </org.jxxy.debug.corekit.widget.IconFont>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/pictureRecyclerView"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/photoIcon"
        >
    </androidx.recyclerview.widget.RecyclerView>
    <Button
        android:layout_width="50dp"
        android:layout_height="@dimen/mid_icon_size"
        android:text="发布"
        android:id="@+id/submitButton"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/primary_200"
        android:background="@drawable/round_p_200">
    </Button>
</org.jxxy.debug.corekit.widget.RoundConstraintLayout>
