<?xml version="1.0" encoding="utf-8"?>
<org.jxxy.debug.corekit.widget.RoundConstraintLayout
    android:background="@color/white"
    android:paddingTop="12dp"
    android:paddingBottom="6dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:round_corner_top="9dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <View
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:id="@+id/grey_view"
        android:background="@drawable/round_grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </View>
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:maxLines="1"
        android:background="@color/transparent"
        android:hint="记录灵光瞬间"
        android:layout_marginLeft="6dp"
        app:layout_constraintTop_toTopOf="@id/grey_view"
        app:layout_constraintBottom_toBottomOf="@id/grey_view"
        app:layout_constraintLeft_toLeftOf="@id/grey_view"/>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_round_hollow"
        android:id="@+id/roundIcon"
        android:textSize="@dimen/small_text_size"
        android:textColor="@color/grey_dark"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grey_view"
        app:layout_constraintBottom_toBottomOf="parent">
    </org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_dark"
        android:layout_marginTop="4dp"
        android:textSize="11sp"
        android:text="发布到动态"
        android:layout_marginLeft="4dp"
        android:id="@+id/roundedText"
        app:layout_constraintLeft_toRightOf="@id/roundIcon"
        app:layout_constraintTop_toBottomOf="@id/grey_view"
        app:layout_constraintBottom_toBottomOf="parent">
    </TextView>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enjoyIcon"
        android:textSize="22dp"
        android:textColor="@color/grey_dark"
        android:text="@string/note_enjoy"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/roundedText"
        app:layout_constraintTop_toBottomOf="@id/grey_view"
        app:layout_constraintBottom_toBottomOf="parent">
    </org.jxxy.debug.corekit.widget.IconFont>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aiteIcon"
        android:textSize="@dimen/mid_icon_size"
        android:textColor="@color/grey_dark"
        android:text="@string/note_aite"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/enjoyIcon"
        app:layout_constraintTop_toBottomOf="@id/grey_view"
        app:layout_constraintBottom_toBottomOf="parent">
    </org.jxxy.debug.corekit.widget.IconFont>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/photoIcon"
        android:textSize="@dimen/mid_icon_size"
        android:textColor="@color/grey_dark"
        android:text="@string/note_photo"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/aiteIcon"
        app:layout_constraintTop_toBottomOf="@id/grey_view"
        app:layout_constraintBottom_toBottomOf="parent">
    </org.jxxy.debug.corekit.widget.IconFont>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moreIcon"
        android:textSize="@dimen/mid_icon_size"
        android:textColor="@color/grey_dark"
        android:text="@string/note_more"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/photoIcon"
        app:layout_constraintTop_toBottomOf="@id/grey_view"
        app:layout_constraintBottom_toBottomOf="parent">
    </org.jxxy.debug.corekit.widget.IconFont>
    <Button
        android:layout_width="50dp"
        android:layout_height="@dimen/mid_icon_size"
        android:text="发布"
        android:id="@+id/submitButton"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintTop_toBottomOf="@id/grey_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/round_p_200">
    </Button>
<!--    <org.jxxy.debug.corekit.widget.IconFont-->
<!--        android:id="@+id/buttonSubmit"-->
<!--        android:layout_width="35dp"-->
<!--        android:layout_height="30dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/editText"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:textColor="@color/white"-->
<!--        android:background="@drawable/round_blue"-->
<!--        android:gravity="center"-->
<!--        android:textSize="24sp"-->
<!--        android:text="&#xe605;" />-->
</org.jxxy.debug.corekit.widget.RoundConstraintLayout>