<?xml version="1.0" encoding="utf-8"?>
<org.jxxy.debug.corekit.widget.RoundConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#363636"
    app:round_corner="4dp"
    android:padding="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/icon_text_select_note"
        android:textSize="@dimen/small_icon_size"
        android:textColor="@color/bg_100"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/copyIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/allIcon"
        app:layout_constraintBottom_toTopOf="@id/copyTextView">
    </org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="思谱"
        android:textColor="@color/bg_100"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/copyTextView"
        app:layout_constraintLeft_toLeftOf="@id/copyIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/copyIcon"
        app:layout_constraintRight_toRightOf="@id/copyIcon">
    </TextView>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/icon_text_select_all"
        android:textSize="@dimen/small_icon_size"
        android:textColor="@color/bg_100"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/allIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/copyIcon"
        app:layout_constraintRight_toLeftOf="@id/noteIcon"
        app:layout_constraintBottom_toTopOf="@id/allTextView">
    </org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="全选"
        android:textColor="@color/bg_100"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/allTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/allIcon"
        app:layout_constraintTop_toBottomOf="@id/allIcon"
app:layout_constraintRight_toRightOf="@id/allIcon"        >
    </TextView>
    <org.jxxy.debug.corekit.widget.IconFont
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/icon_text_select_note"
    android:textSize="@dimen/small_icon_size"
        android:textColor="@color/bg_100"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
    android:id="@+id/noteIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/allIcon"
        app:layout_constraintBottom_toTopOf="@id/noteTextView"
        app:layout_constraintRight_toLeftOf="@id/markIcon">
</org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="做笔记"
        android:textColor="@color/bg_100"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/noteTextView"
        app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintLeft_toLeftOf="@id/noteIcon"
        app:layout_constraintTop_toBottomOf="@id/noteIcon"
        app:layout_constraintRight_toRightOf="@id/noteIcon">
    </TextView>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/icon_text_select_mark"
        android:textSize="@dimen/mid_icon_size"
        android:textColor="@color/bg_100"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/markIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/noteIcon"
        app:layout_constraintBottom_toTopOf="@id/markTextView"
        app:layout_constraintRight_toLeftOf="@id/searchIcon">
    </org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="写想法"
        android:textColor="@color/bg_100"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/markTextView"
        app:layout_constraintBottom_toBottomOf="@id/canalTextView"
        app:layout_constraintLeft_toLeftOf="@id/markIcon"
  app:layout_constraintTop_toTopOf="@id/canalTextView"
        app:layout_constraintRight_toRightOf="@id/markIcon">
    </TextView>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/icon_text_select_search"
        android:textSize="@dimen/small_icon_size"
        android:textColor="@color/bg_100"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/searchIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/searchTextView"
        app:layout_constraintRight_toLeftOf="@id/canalIcon"
        app:layout_constraintLeft_toRightOf="@id/markIcon">
    </org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="搜索"
        android:textColor="@color/bg_100"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/searchTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/searchIcon"
        app:layout_constraintTop_toBottomOf="@id/searchIcon"
        app:layout_constraintRight_toRightOf="@id/searchIcon"
        >
    </TextView>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/icon_text_select_canal"
        android:textSize="@dimen/small_icon_size"
        android:textColor="@color/bg_100"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/canalIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/canalTextView"
       app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/searchIcon">
    </org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="取消"
        android:textColor="@color/bg_100"
        android:textSize="@dimen/small_text_size"
        android:id="@+id/canalTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/canalIcon"
        app:layout_constraintTop_toBottomOf="@id/canalIcon"
        app:layout_constraintRight_toRightOf="@id/canalIcon"
        >
    </TextView>

</org.jxxy.debug.corekit.widget.RoundConstraintLayout>