<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/status_bar_height"
    android:background="@color/bg_200">
    <org.jxxy.debug.corekit.widget.CommonToolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:id="@+id/act"
        app:layout_constraintTop_toTopOf="parent"
        app:titleText="详情">
    </org.jxxy.debug.corekit.widget.CommonToolbar>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/forumRV"
        android:layout_gravity ="top"
        app:layout_constraintTop_toBottomOf="@id/act"
        app:layout_constraintBottom_toTopOf="@id/acl"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" >
    </androidx.recyclerview.widget.RecyclerView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/acl"
        android:elevation="4dp"
        android:background="@color/bg_200">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.5"
            android:layout_marginLeft="16dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:background="@drawable/rounded_white_anwser"

            android:id="@+id/editTextView"
            android:gravity="center"
            android:text="点我发评论"
            android:textColor="#c0c0c0"
            android:textSize="@dimen/normal_text_size">
        </TextView>
        <org.jxxy.debug.corekit.widget.IconFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/dark_grey"
            android:text="@string/like_fill"
            android:textSize="@dimen/mid_icon_size"
            app:layout_goneMarginRight="12dp"
            app:layout_constraintTop_toTopOf="@id/editTextView"
            app:layout_constraintBottom_toBottomOf="@id/editTextView"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/likeIcon">
        </org.jxxy.debug.corekit.widget.IconFont>
        <org.jxxy.debug.corekit.widget.IconFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="@dimen/mid_icon_size"
            android:layout_marginEnd="24dp"
            android:textColor="@color/dark_grey"
            android:text="@string/icon_share_new"
            app:layout_constraintTop_toTopOf="@id/editTextView"
            app:layout_constraintBottom_toBottomOf="@id/editTextView"
            app:layout_constraintEnd_toStartOf="@id/markIcon"
            android:id="@+id/shareIcon">
        </org.jxxy.debug.corekit.widget.IconFont>
        <org.jxxy.debug.corekit.widget.IconFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/mark"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/mid_icon_size"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="@id/editTextView"
            app:layout_constraintBottom_toBottomOf="@id/editTextView"
            app:layout_constraintEnd_toStartOf="@id/likeIcon"
            android:id="@+id/markIcon">
        </org.jxxy.debug.corekit.widget.IconFont>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>