<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/mid_icon_size"
        android:id="@+id/likeIcon"
        android:textColor="@color/grey_dark"
        android:text="@string/like_fill"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/unLikeIcon"
        android:gravity="center"
        app:layout_constraintWidth_percent="0.25"
        >
    </org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/likeIcon"
        app:layout_constraintLeft_toLeftOf="@id/likeIcon"
        app:layout_constraintRight_toRightOf="@id/likeIcon"
        android:id="@+id/likeText">
    </TextView>

    <org.jxxy.debug.corekit.widget.IconFont
        android:id="@+id/unLikeIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:rotation="180"
        android:rotationY="-180"
        android:text="@string/like_fill"
        android:textColor="@color/grey_dark"
        android:textSize="@dimen/mid_icon_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/likeIcon"
        app:layout_constraintRight_toLeftOf="@id/markIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25"></org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/black"
        android:text="不喜欢"
        app:layout_constraintTop_toBottomOf="@id/unLikeIcon"
        app:layout_constraintLeft_toLeftOf="@id/unLikeIcon"
        app:layout_constraintRight_toRightOf="@id/unLikeIcon"
        android:id="@+id/unLikeText">
    </TextView>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/mid_icon_size"
        android:id="@+id/markIcon"
        android:textColor="@color/grey_dark"
        android:text="@string/mark"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/unLikeIcon"
        app:layout_constraintRight_toLeftOf="@id/shareIcon"
        app:layout_constraintWidth_percent="0.25"
        >
    </org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/markIcon"
        app:layout_constraintLeft_toLeftOf="@id/markIcon"
        app:layout_constraintRight_toRightOf="@id/markIcon"
        android:id="@+id/markText">
    </TextView>
    <org.jxxy.debug.corekit.widget.IconFont
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/mid_icon_size"
        android:id="@+id/shareIcon"
        android:textColor="@color/grey_dark"
        android:text="@string/icon_share"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/markIcon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.25"
        >
    </org.jxxy.debug.corekit.widget.IconFont>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/shareIcon"
        app:layout_constraintLeft_toLeftOf="@id/shareIcon"
        app:layout_constraintRight_toRightOf="@id/shareIcon"
        android:id="@+id/shareText">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>